# decisao-estrategica-logistica-ciencia-dados

./: Atividade_2_Clusterizacao_Resultados.docx  README.md  decisao-estrategica-logistica-ciencia-dados.ipynb  pyproject.toml  ~$ividade_2_Clusterizacao_Resultados.docx
